Cleaned up BaseTest.java, refactored Driver setup and usage. Added Firefox driver preferences and ConfigKeys constants.