@@ -25,7 +25,6 @@ public class ProductTests extends BaseTest {
     private static final String WOMEN_CATEGORY = "Women";
     private static final String SAREE_SUBCATEGORY = "Saree";
     private static final String POLO_BRAND = "Polo";
-    private static final String BIBA_BRAND = "Biba";
     private static final String SEARCH_PRODUCTS_VALUE = "Tshirt";
     private static final String REVIEW_SUCCESS_MESSAGE = "Thank you for your review.";
     private static final String EMPTY_CART_MESSAGE = "Cart is empty!";
@@ -33,7 +32,7 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"smoke", "regression", "products", "non_destructive", "fast"})
     public void userCanViewProductDetailsFromProductsPage() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         ProductDetailsPage productDetailsPage =  productsPage.viewSingleProduct(MEN_TSHIRT);
         ProductDetails actual = productDetailsPage.getProductDetails();
 
@@ -47,18 +46,18 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"smoke", "regression", "products", "non_destructive", "fast"})
     public void userCanSearchForProductByName() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         productsPage.searchProduct(BLUE_TOP);
         Assert.assertEquals(productsPage.getFirstSearchProductName(),BLUE_TOP);
     }
 
     @Test(groups = {"regression", "products", "cart", "data_integrity", "slow"})
     public void userCanAddMultipleProductsToCart() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         CartPage cartPage = flows.addProductsAndGoToCart(productsPage,2);
         List<CartItem> items = cartPage.readCartItems();
         Assert.assertEquals(items.size(), 2);
-        List<String> names = items.stream().map(CartItem::getProductName).collect(Collectors.toList());
+        List<String> names = items.stream().map(CartItem::getProductName).toList();
         Assert.assertTrue(names.contains(BLUE_TOP));
         Assert.assertTrue(names.contains(MEN_TSHIRT));
 
@@ -71,7 +70,7 @@ public class ProductTests extends BaseTest {
     @Test(groups = {"regression", "products", "cart", "data_integrity", "slow"})
     public void userCanAddMultipleQuantitiesOfProductToCart() {
         Integer productQuantity = 4;
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         ProductDetailsPage productDetailsPage =  productsPage.viewSingleProduct(SLEEVELESS_DRESS);
         productDetailsPage.setProductQuantity(productQuantity);
         CartPage cartPage = productDetailsPage.addToCartAndGoToCart();
@@ -84,7 +83,7 @@ public class ProductTests extends BaseTest {
     }
     @Test(groups = {"regression", "cart", "data_integrity", "fast"})
     public void userCanAddAndRemoveProductsFromCart() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         CartPage cartPage = flows.addProductsAndGoToCart(productsPage, 3);
         cartPage.clearCart();
         Assert.assertEquals(cartPage.getEmptyCartMessage(), EMPTY_CART_MESSAGE);
@@ -92,7 +91,7 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"regression", "products", "navigation", "non_destructive", "fast"})
     public void userCanBrowseProductsByCategory() {
-        HomePage homePage = openHomePage();
+        HomePage homePage = flows.openHomePage();
 
         ProductsPage productsPage = homePage.category.selectCategoryAndSubcategory(MEN_CATEGORY, JEANS_SUBCATEGORY);
         Assert.assertEquals(productsPage.getProductResultTitle(),(JEANS_SUBCATEGORY));
@@ -102,14 +101,14 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"regression", "products", "non_destructive", "fast"})
     public void userCanFilterProductsByBrand() {
-        HomePage homePage = openHomePage();
+        HomePage homePage = flows.openHomePage();
         ProductsPage productsPage = homePage.brand.selectProductBrandByName(POLO_BRAND);
         Assert.assertEquals(productsPage.getProductResultTitle(),POLO_BRAND);
     }
 
     @Test(groups = {"regression", "products", "cart", "auth", "critical_path", "slow"})
     public void userCartIsPreservedAfterLogin() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         productsPage.searchProduct(SEARCH_PRODUCTS_VALUE);
         Set <String> searchResults = productsPage.getAllSearchProductNames();
         CartPage cartPage = flows.addProductsAndGoToCart(productsPage, 5);
@@ -134,7 +133,7 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"regression", "products", "destructive", "slow"})
     public void userCanAddReviewToProduct() {
-        ProductsPage productsPage = openProductsPage();
+        ProductsPage productsPage = flows.openProductsPage();
         ProductDetailsPage productDetailsPage = productsPage.viewSingleProduct(SLEEVELESS_DRESS);
         productDetailsPage.addReviewToProduct("Reviewer", "test@review.com","Good product quality");
         Assert.assertEquals(productDetailsPage.getReviewSubmissionConfirmation(),REVIEW_SUCCESS_MESSAGE);
@@ -142,7 +141,7 @@ public class ProductTests extends BaseTest {
 
     @Test(groups = {"regression", "products", "cart", "fast"})
     public void userCanAddRecommendedProductToCart() {
-        HomePage homePage = openHomePage();
+        HomePage homePage = flows.openHomePage();
         homePage.addRecommendedProductToCart(SLEEVELESS_DRESS);
         CartPage cartPage = homePage.modal.goToCart();
         Assert.assertEquals(normalizer.normalizeText(cartPage.getCartItemName()), normalizer.normalizeText(SLEEVELESS_DRESS));
